--- a/index.html
+++ b/index.html
@@ -9,68 +9,71 @@
     <title>Kseniya Resume</title>
 </head>
 <body>
-    <img src="logo.jpg" width="300" alt="Ксения Демченко">
-    <h1>Демченко Ксения</h1>
-    <div class="info-text">
-        <p>Я работаю инженером веб-проектов в компании "WEBIS GROUP"</p>
-        <p>Люблю гулять с дочкой, смотреть образовательные ролики на youtube.</p>
-    </div>
-    <h3>Список социальных сетей</h3>
-    <a href="https://www.instagram.com/ksushademchenko/">Instagram</a>
-    |
-    <a href="https://t.me/Kserofiya">Telegram</a>
-    |
-    <a href="https://github.com/Kserofiya">Github Pages</a>
-    </ul>
-    <div class="card bg-green">
-        <h2>Мои хобби</h2>
-        <ol>
-            <li>Слушать музыку</li>
-            <li>Гулять</li>
-            <li>Учиться новому</li>
-            <li>Проводить время с семьёй</li>
-        </ol>
-    </div>
-    <div class="card bg-red">
-        <h2>Опыт работы</h2>
-        <table>
-            <thead>
-                <tr>
-                    <th>Название</th>
-                    <th>Должность</th>
-                    <th>Год</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>"Медиа КСТ"</td>
-                    <td>Менеджер ЕЦПК</td>
-                    <td>2017</td>
-                </tr>
-                <tr>
-                    <td>ООО "Вебис Груп"</td>
-                    <td>Инженер веб-проектов</td>
-                    <td>с 2021 по настоящее время</td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
-    <h2>Связаться со мной</h2>
-    <form action="/">
-        <div>
-            <label for="name">Ваше имя:</label>
-            <input type="text" name="name" id="name" placeholder="Введите имя">
+    <div class="container">
+        <img class="avatar" src="logo.jpg" width="300" alt="Ксения Демченко">
+        <h1>Демченко Ксения</h1>
+        <div class="info-text">
+            <p>Я работаю инженером веб-проектов в компании "WEBIS GROUP"</p>
+            <p>Люблю гулять с дочкой, смотреть образовательные ролики на youtube.</p>
         </div>
-        <div>
-            <label for="email">Ваш email:</label>
-            <input type="text" name="email" id="email" placeholder="Введите email">
+        <div class="card bg-yellow">
+            <h3>Список социальных сетей</h3>
+            <a href="https://www.instagram.com/ksushademchenko/">Instagram</a>
+            |
+            <a href="https://t.me/Kserofiya">Telegram</a>
+            |
+            <a href="https://github.com/Kserofiya">Github Pages</a>
         </div>
-        <div>
-            <label for="message">Ваше сообщение:</label>
-            <br>
-            <textarea name="message" id="message" cols="30" rows="10" placeholder="Введите сообщение..."></textarea>
+        <div class="card bg-green">
+            <h2>Мои хобби</h2>
+            <ol>
+                <li>Слушать музыку</li>
+                <li>Гулять</li>
+                <li>Учиться новому</li>
+                <li>Проводить время с семьёй</li>
+            </ol>
         </div>
-        <button type="submit">Отправить</button>
-    </form>
+        <div class="card bg-red">
+            <h2>Опыт работы</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Название</th>
+                        <th>Должность</th>
+                        <th>Год</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>"Медиа КСТ"</td>
+                        <td>Менеджер ЕЦПК</td>
+                        <td>2017</td>
+                    </tr>
+                    <tr>
+                        <td>ООО "Вебис Груп"</td>
+                        <td>Инженер веб-проектов</td>
+                        <td>с 2021 по настоящее время</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <h2>Связаться со мной</h2>
+        <form action="/">
+            <div>
+                <label for="name">Ваше имя:</label>
+                <input type="text" name="name" id="name" placeholder="Введите имя">
+            </div>
+            <div>
+                <label for="email">Ваш email:</label>
+                <input type="text" name="email" id="email" placeholder="Введите email">
+            </div>
+            <div>
+                <label for="message">Ваше сообщение:</label>
+                <br>
+                <textarea name="message" id="message" cols="30" rows="10" placeholder="Введите сообщение..."></textarea>
+            </div>
+            <button type="submit">Отправить</button>
+        </form>
+    </div>
 </body>
 </html>
