--- a/index.html
+++ b/index.html
@@ -10,19 +10,22 @@
 </head>
 <body>
     <div class="container">
-        <img class="avatar" src="logo.jpg" width="300" alt="Ксения Демченко">
-        <h1>Демченко Ксения</h1>
-        <div class="info-text">
-            <p>Я работаю инженером веб-проектов в компании "WEBIS GROUP"</p>
-            <p>Люблю гулять с дочкой, смотреть образовательные ролики на youtube.</p>
-        </div>
-        <div class="card bg-yellow">
-            <h3>Список социальных сетей</h3>
-            <a href="https://www.instagram.com/ksushademchenko/">Instagram</a>
-            |
-            <a href="https://t.me/Kserofiya">Telegram</a>
-            |
-            <a href="https://github.com/Kserofiya">Github Pages</a>
+        <div class="info">
+            <img class="avatar" src="logo.jpg" alt="Ксения Демченко">
+            <div class="info-text">
+                <h1>Демченко Ксения</h1>
+
+                <p>Я работаю инженером веб-проектов в компании "WEBIS GROUP"</p>
+                <p>Люблю гулять с дочкой, смотреть образовательные ролики на youtube.</p>
+                <br>
+                <h4>Список социальных сетей</h4>
+
+                <a href="https://www.instagram.com/ksushademchenko/">Instagram</a>
+                |
+                <a href="https://t.me/Kserofiya">Telegram</a>
+                |
+                <a href="https://github.com/Kserofiya">Github Pages</a>
+            </div>
         </div>
         <div class="card bg-green">
             <h2>Мои хобби</h2>
@@ -57,22 +60,24 @@
                 </tbody>
             </table>
         </div>
-        <h2>Связаться со мной</h2>
-        <form action="/">
-            <div>
-                <label for="name">Ваше имя:</label>
-                <input type="text" name="name" id="name" placeholder="Введите имя">
+        
+        <form action="/" class="form">
+            <h2>Связаться со мной</h2>
+            <div class="form-row">
+                <div class="form-group">
+                    <label for="name">Ваше имя:</label>
+                    <input type="text" name="name" id="name" placeholder="Введите имя">
+                </div>
+                <div class="form-group">
+                    <label for="email">Ваш email:</label>
+                    <input type="text" name="email" id="email" placeholder="Введите email">
+                </div>
             </div>
-            <div>
-                <label for="email">Ваш email:</label>
-                <input type="text" name="email" id="email" placeholder="Введите email">
-            </div>
-            <div>
+            <div class="form-group">
                 <label for="message">Ваше сообщение:</label>
-                <br>
-                <textarea name="message" id="message" cols="30" rows="10" placeholder="Введите сообщение..."></textarea>
+                <textarea name="message" id="message" cols="30" rows="5" placeholder="Введите сообщение..."></textarea>
             </div>
-            <button type="submit">Отправить</button>
+            <button class="btn" type="submit">Отправить</button>
         </form>
     </div>
 </body>
